[package]
name = "rustpak"
version = "0.1.1"
authors = ["Sophie Luna Schumann <me@luna.vg>"]
edition = "2021"
description = "Rust library/tool to manage GoldSrc .pak files"
license-file = "LICENSE"
homepage = "https://github.com/SharkyRawr/rustpak"
repository = "https://github.com/SharkyRawr/rustpak"
keywords = ["gamedev", "goldsrc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
clap = { version = "4.5.54", features = ["derive"] }
