[package]
name = "rustpak"
version = "0.1.2"
authors = ["Sophie Luna Schumann <me@sophie.lgbt>"]
edition = "2021"
description = "Rust library and CLI tool for reading and writing GoldSrc .pak archive files"
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
homepage = "https://github.com/SharkyRawr/rustpak"
repository = "https://github.com/SharkyRawr/rustpak"
documentation = "https://docs.rs/rustpak"
keywords = [
    "pak",
    "goldsrc",
    "half-life",
    "gamedev",
    "archive",
]
categories = [
    "encoding",
    "filesystem",
    "game-development",
    "parser-implementations",
]
rust-version = "1.70"

[dependencies]
byteorder = "1.4"
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "rustpak"
path = "src/main.rs"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
